--- a/lesson1/in.html
+++ b/lesson1/in.html
@@ -7,7 +7,7 @@
         </head>
     <body>
         <h1>Personal Information</h1>
-<form action="https://mate-academy-form-lesson.herokuapp.com/create-application." method="POST" autocomplete="on">
+<form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="POST" autocomplete="on">
   <fieldset><legend>Personal Information</legend>
     <div><label><span>Surname:</span>
          <input type="text" name="surname"/></label></div>
