--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head><meta charset="utf-8">
         <title>Elena</title>
-        <link rel="stylesheet" href="elena.css"/></head>
+        <link rel="stylesheet" href="style.css"/></head>
     <body>
         <header>
             <div class="container">
