--- a/lesson1/in.html
+++ b/lesson1/in.html
@@ -25,7 +25,7 @@
     <div><label><span>E-mail</span>
         <input type="email" name="login"/></label></div>
     <div><label><span>Password</span>
-        <input type="text" name="pass"></label></div>
+        <input type="password" name="pass"></label></div>
   </fieldset>
 
   <fieldset><legend>An interesting fact about you!</legend>
