--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -15,7 +15,7 @@
 
 	<link rel="stylesheet" href="font.css" />
 	<link rel="stylesheet" href="style.css" />
-	<!--<link rel="stylesheet" href="media.css" />-->
+	<link rel="stylesheet" href="media.css" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 		</a>
 	</div>
 		<div class="header_content">
-			<nav class="top_menu">
+			<nav class="menu">
 				<a href="#">Home</a>
 				<a href="#services">Services</a>
 				<a href="#features">Features</a>
