--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -29,7 +29,7 @@
 		</a>
 	</div>
 		<div class="header_content">
-			<nav class="menu">
+			<nav class="top_menu">
 				<a href="#">Home</a>
 				<a href="#services">Services</a>
 				<a href="#features">Features</a>
