--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" type="text.css" href="style.css">
+	<link rel="stylesheet" type="text.css" href="reset.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
