--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -15,7 +15,7 @@
 
 	<link rel="stylesheet" href="font.css" />
 	<link rel="stylesheet" href="style.css" />
-	<!--<link rel="stylesheet" href="media.css" />-->
+	<link rel="stylesheet" href="media.css" />
 </head>
 
 <body>
@@ -50,7 +50,8 @@
 				<ul class ="flex_container">
 					<li>
 						<div class="three_columns_title">
-							<div class="heart top"><img src="image/user-group%20copy.png" alt="#"></div>
+							<div class="heart top">
+                                <span><img src="image/user-group%20copy.png" alt="#"></span></div>
 							<h2>Profecionals</h2>
 						</div>
 						<p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
@@ -58,7 +59,7 @@
 					</li>
 					<li>
 						<div class="three_columns_title">
-							<div class="heart top"><img src="image/heart_1.png" alt="#"></div>
+                            <div class="heart top"><span><img src="image/heart_1.png" alt="#"></span></div>
 							<h2>Amateurs</h2>
 						</div>
 						<p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
@@ -66,7 +67,8 @@
 					</li>
 					<li>
 						<div class="three_columns_title">
-							<div class="heart top"><img src="image/headset.png" alt="#"></div>
+							<div class="heart top">
+                                <span><img src="image/headset.png" alt="#"></span></div>
 							<h2>For everyone</h2>
 						</div>
 						<p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
@@ -80,7 +82,7 @@
 			<div class="container flex_container">
 				<div class="two_columns_info">
 					<div class="cover">
-						<img src="image/car.jpg" alt="">
+                        <span><img src="image/car.jpg" alt=""></span>
 					</div>
 					<h3>Responsive email template</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium assumenda necessitatibus.</p>
@@ -90,7 +92,7 @@
 				</div>
 				<div class="two_columns_info">
 					<div class="cover">
-						<img src="image/couple.jpg" alt="">
+                        <span><img src="image/couple.jpg" alt=""></span>
 					</div>
 					<h3>Fully compatible template</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium assumenda necessitatibus.</p>
@@ -121,7 +123,7 @@
 				<li>
 					<div class="three_columns_title_bot">
 						<div class="cover">
-						<img src="image/traffic_light.png" alt="">
+                            <span><img src="image/traffic_light.png" alt=""></span>
 						</div>
 						<h2>FULLY Layered PSD</h2>
 					</div>
@@ -131,7 +133,7 @@
 				<li>
 					<div class="three_columns_title_bot">
 						<div class="cover">
-						<img src="image/umbrella.png" alt="">
+                            <span><img src="image/umbrella.png" alt=""></span>
 						</div>
 						<h2>FUll Compatibility</h2>
 					</div>
@@ -141,7 +143,7 @@
 				<li class="align-self">
 					<div class="three_columns_title_bot">
 						<div class="cover">
-						<img src="image/sneakers.png" alt="">
+                            <span><img src="image/sneakers.png" alt=""></span>
 						</div>
 						<h2>very great modules </h2>
 					</div>
