--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="logo">
-        <img src="" alt=""/>
+        <img src="image/logo.png" alt=""/>
         <ul class="menu">
             <li><a href="">Home</a></li>
             <li><a href="">about</a></li>
@@ -22,132 +22,137 @@
         </div>
         <div class="header">
             <h1>Welcome to our marketplace</h1>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus ...</p>
             <button>view more</button>
             <button>video tour</button>
 <!--            <div>переключение заставки лого</div>-->
         </div>
         <div>
             <h1></h1>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p>
+            <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
             <ol>
                 <li>01
-                    <h4></h4>
-                    <p></p>
+                    <h4>Dedication to the customers</h4>
+                    <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
                 </li>
                 <li>02
-                    <h4></h4>
-                    <p></p>
+                    <h4>working closely with our clients</h4>
+                    <p>Sed blandit nisi urna, sed pellentesque enim consectetur vitae. Suspendisse ut vehicula nibh.</p>
                 </li>
                 <li>03
-                    <h4></h4>
-                    <p></p>
+                    <h4>working closely with our clients</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eleifend laoreet euismod.</p>
                 </li>
             </ol> 
 <!--            FLGDE как оформить-->
         </div>
-    <div class="meet">meet the team
+        <div class="meet"><h3 class="line">meet the team</h3>
         <div class="speaker"> 
-            <img src="" alt="">
+            <img src="image/pic1.png" alt="">
             <a>gloria bromley</a>
             <p>ceo and founder</p>
         </div>
         <div class="speaker">
-            <img src="" alt="">
+            <img src="image/pic2.png" alt="">
             <a>paul torres</a>
             <p>head of development</p>
         </div>
         <div class="speaker">
-            <img src="" alt="">
+            <img src="image/pic3.png" alt="">
             <a>judith gillette</a>
             <p>graphicDesinger</p>
         </div>
         <div class="speaker">
-            <img src="" alt="">
+            <img src="image/pic4.png" alt="">
             <a>delores reed</a>
             <p>client cervice director</p>
         </div>
 <!--        вставить ховер на второе изображение-->
     </div>
     <div class="travel">
-<!--        <blockqoute>LOvely work</blockqoute> цитата или что-то... или <q>-->
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <h3 class="line">LOvely work</h3>
+        <img src="image/pic5.png" alt="">
+        <img src="image/pic6.png" alt="">
+        <img src="image/pic7.png" alt="">
+        <img src="image/pic8.png" alt="">
+        <img src="image/pic9.png" alt="">
+        <img src="image/pic10.png" alt="">
         <button>show me more</button>
     </div>        
     <div class="setting">
-<!--        <q>what we do</q>  цитата или что-то... или <blockqoute>-->
+        <h3 class="line">what we do</h3>
         <div class="help">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/cogs.png" alt="">
+            <h4>Easy theme Setup</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div class="help">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/cogs.png" alt="">
+            <h4>pixel perfect design</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/pencil.png" alt="">
+            <h4>responsive display</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/mobile.png" alt="">
+            <h4>24/7 support</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/cogs%20copy.png" alt="">
+            <h4>Easy theme Setup</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/pencil%20copy.png" alt="">
+            <h4>pixel perfect design</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/mobile.png" alt="">
+            <h4>responsive display</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
         <div>
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/clock.png" alt="">
+            <h4>24/7 support</h4>
+            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
     </div>
     <div class="features">
-        <div class="nature">features
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+        <div class="nature"><h3 class="line">features</h3>
+            <img src="image/pic11.png" alt="">
+            <h4>product design: eames chairs</h4>
+            <p>Eames designs are certainlyiconic. Everyone of usknow at leasttwo or three of their famous chairs. Iwould even risksaying that mostof us dream about havinga nice Eames</p>
         </div>
         <div class="nature">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/pic12.png" alt="">
+            <h4>elegantand colorful logos</h4>
+            <p>I`ve always found logodesign to be one of the most challenging things to get right. There`s so much that a logo can say about a brand without actully saying it.</p>
         </div>
         <div class="nature">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="image/pic13.png" alt="">
+            <h4>a showcase of creative</h4>
+            <p>It`s always interesting to see another designer`s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
         </div>
     </div>
-    <div class="map">stay in touch
+        <div class="map"><h3 class="line">stay in touch</h3>
+            <img src="image/pic14.png" alt="">
+<!--
         <map>
-<!--            <area shape="poly" href=""> вставить ссылку на карту-->
+            <area shape="poly" href=""> вставить ссылку на карту
         </map>
+-->
     </div>
-    <div>contacts
+        <div class="contacts">
         <div>
-            <h4></h4>
-            <p></p>
+            <h4>Contact information</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
+            <p>Cras fermentum elit quis magna congue, <strong>vel sodales</strong> arcu vestibulum. Nunc lobortis dui magna, quisdapibus lacus</p>
         </div>
         <form>
 <!--            сделать форму -->
