--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -27,8 +27,8 @@
             <button>video tour</button>
 <!--            <div>переключение заставки лого</div>-->
         </div>
-        <div>
-            <h1></h1>
+        <div class="info">
+            <h2>We are modest</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p>
             <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
             <ol>
@@ -162,7 +162,7 @@
 		<div class="footer_content">
 			<div class="container flex_container">
 			    <div class="copyright">
-				     <p>© <span class="copy">copyright 2014 by PSD Booster. All Rights Reserved/</span></p>
+				     <p>© <span class="copy">copyright 2014 by PSD Booster. All Rights Reserved</span></p>
 			    </div>
 			<div class="social">
 				<a href="#"><img src="" href="#"></a>
