--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="table.css">
     </head>
 <body>
     <div class="wrapper">
@@ -27,11 +28,12 @@
             <button>video tour</button>
 <!--            <div>переключение заставки лого</div>-->
         </div>
-        <div class="info">
-            <h2>We are modest</h2>
+    <h2>We are modest</h2>
+        <div class="grid">
+        <div class="info">            
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p>
             <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
-            <ol>
+            <ol type="01">
                 <li>01
                     <h4>Dedication to the customers</h4>
                     <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
@@ -47,14 +49,17 @@
             </ol> 
 <!--            FLGDE как оформить-->
         </div>
-        <div class="meet"><h3 class="line">meet the team</h3>
-        <div class="speaker"> 
-            <img src="image/pic1.png" alt="">
-            <a>gloria bromley</a>
-            <p>ceo and founder</p>
         </div>
-        <div class="speaker">
-            <img src="image/pic2.png" alt="">
+    <h3 class="line">meet the team</h3>
+        <div class="grid">
+            <div class="meet">
+                <div class="speaker">
+                    <img src="image/pic1.png" alt="">
+                    <a>gloria bromley</a>
+                    <p>ceo and founder</p>
+                </div>
+                <div class="speaker">
+                    <img src="image/pic2.png" alt="">
             <a>paul torres</a>
             <p>head of development</p>
         </div>
@@ -69,19 +74,23 @@
             <p>client cervice director</p>
         </div>
 <!--        вставить ховер на второе изображение-->
-    </div>
-    <div class="travel">
-        <h3 class="line">LOvely work</h3>
-        <img src="image/pic5.png" alt="">
-        <img src="image/pic6.png" alt="">
-        <img src="image/pic7.png" alt="">
-        <img src="image/pic8.png" alt="">
-        <img src="image/pic9.png" alt="">
-        <img src="image/pic10.png" alt="">
+            </div></div>
+    <h3 class="line">LOvely work</h3>
+        <div class="grid">
+        <div class="travel">
+            <div class="foto">
+                <img src="image/pic5.png" alt="">
+            </div>
+            <div class="foto"><img src="image/pic6.png" alt=""></div>
+            <div class="foto"><img src="image/pic7.png" alt=""></div>
+            <div class="foto"><img src="image/pic8.png" alt=""></div>
+            <div class="foto"><img src="image/pic9.png" alt=""></div>
+            <div class="foto"><img src="image/pic10.png" alt=""></div>        
+        </div></div>
         <button>show me more</button>
-    </div>        
+    <h3 class="line">what we do</h3>
+        <div class="grid">
     <div class="setting">
-        <h3 class="line">what we do</h3>
         <div class="help">
             <img src="image/cogs.png" alt="">
             <h4>Easy theme Setup</h4>
@@ -123,8 +132,11 @@
             <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
         </div>
     </div>
-    <div class="features">
-        <div class="nature"><h3 class="line">features</h3>
+    </div>
+    <h3 class="line">features</h3>
+        <div class="grid">
+        <div class="features">
+        <div class="nature">
             <img src="image/pic11.png" alt="">
             <h4>product design: eames chairs</h4>
             <p>Eames designs are certainlyiconic. Everyone of usknow at leasttwo or three of their famous chairs. Iwould even risksaying that mostof us dream about havinga nice Eames</p>
@@ -139,7 +151,8 @@
             <h4>a showcase of creative</h4>
             <p>It`s always interesting to see another designer`s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
         </div>
-    </div>
+        </div>
+        </div>
         <div class="map"><h3 class="line">stay in touch</h3>
             <img src="image/pic14.png" alt="">
 <!--
