--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -1,192 +1,227 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="table.css">
-    </head>
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+	<link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <div class="wrapper">
-        <div class="logo">
-        <img src="image/logo.png" alt=""/>
-        <ul class="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">about</a></li>
-            <li><a href="">work</a></li>
-            <li><a href="">Team</a></li>
-            <li><a href="">services</a></li>
-            <li><a href="">features</a></li>
-            <li><a href="">contact</a></li>
-        </ul>
-        </div>
-        <div class="header">
-            <h1>Welcome to our marketplace</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus ...</p>
-            <button>view more</button>
-            <button>video tour</button>
-<!--            <div>переключение заставки лого</div>-->
-        </div>
-    <h2>We are modest</h2>
-        <div class="grid">
-        <div class="info">            
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p>
-            <p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
-            <ol type="01">
-                <li>01
-                    <h4>Dedication to the customers</h4>
-                    <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
-                </li>
-                <li>02
-                    <h4>working closely with our clients</h4>
-                    <p>Sed blandit nisi urna, sed pellentesque enim consectetur vitae. Suspendisse ut vehicula nibh.</p>
-                </li>
-                <li>03
-                    <h4>working closely with our clients</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eleifend laoreet euismod.</p>
-                </li>
-            </ol> 
-<!--            FLGDE как оформить-->
-        </div>
-        </div>
-    <h3 class="line">meet the team</h3>
-        <div class="grid">
-            <div class="meet">
-                <div class="speaker">
-                    <img src="image/pic1.png" alt="">
-                    <a>gloria bromley</a>
-                    <p>ceo and founder</p>
-                </div>
-                <div class="speaker">
-                    <img src="image/pic2.png" alt="">
-            <a>paul torres</a>
-            <p>head of development</p>
-        </div>
-        <div class="speaker">
-            <img src="image/pic3.png" alt="">
-            <a>judith gillette</a>
-            <p>graphicDesinger</p>
-        </div>
-        <div class="speaker">
-            <img src="image/pic4.png" alt="">
-            <a>delores reed</a>
-            <p>client cervice director</p>
-        </div>
-<!--        вставить ховер на второе изображение-->
-            </div></div>
-    <h3 class="line">LOvely work</h3>
-        <div class="grid">
-        <div class="travel">
-            <div class="foto">
-                <img src="image/pic5.png" alt="">
-            </div>
-            <div class="foto"><img src="image/pic6.png" alt=""></div>
-            <div class="foto"><img src="image/pic7.png" alt=""></div>
-            <div class="foto"><img src="image/pic8.png" alt=""></div>
-            <div class="foto"><img src="image/pic9.png" alt=""></div>
-            <div class="foto"><img src="image/pic10.png" alt=""></div>        
-        </div></div>
-        <button>show me more</button>
-    <h3 class="line">what we do</h3>
-        <div class="grid">
-    <div class="setting">
-        <div class="help">
-            <img src="image/cogs.png" alt="">
-            <h4>Easy theme Setup</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div class="help">
-            <img src="image/cogs.png" alt="">
-            <h4>pixel perfect design</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/pencil.png" alt="">
-            <h4>responsive display</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/mobile.png" alt="">
-            <h4>24/7 support</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/cogs%20copy.png" alt="">
-            <h4>Easy theme Setup</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/pencil%20copy.png" alt="">
-            <h4>pixel perfect design</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/mobile.png" alt="">
-            <h4>responsive display</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-        <div>
-            <img src="image/clock.png" alt="">
-            <h4>24/7 support</h4>
-            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
-        </div>
-    </div>
-    </div>
-    <h3 class="line">features</h3>
-        <div class="grid">
-        <div class="features">
-        <div class="nature">
-            <img src="image/pic11.png" alt="">
-            <h4>product design: eames chairs</h4>
-            <p>Eames designs are certainlyiconic. Everyone of usknow at leasttwo or three of their famous chairs. Iwould even risksaying that mostof us dream about havinga nice Eames</p>
-        </div>
-        <div class="nature">
-            <img src="image/pic12.png" alt="">
-            <h4>elegantand colorful logos</h4>
-            <p>I`ve always found logodesign to be one of the most challenging things to get right. There`s so much that a logo can say about a brand without actully saying it.</p>
-        </div>
-        <div class="nature">
-            <img src="image/pic13.png" alt="">
-            <h4>a showcase of creative</h4>
-            <p>It`s always interesting to see another designer`s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
-        </div>
-        </div>
-        </div>
-        <div class="map"><h3 class="line">stay in touch</h3>
-            <img src="image/pic14.png" alt="">
-<!--
-        <map>
-            <area shape="poly" href=""> вставить ссылку на карту
-        </map>
--->
-    </div>
-        <div class="contacts">
-        <div>
-            <h4>Contact information</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
-            <p>Cras fermentum elit quis magna congue, <strong>vel sodales</strong> arcu vestibulum. Nunc lobortis dui magna, quisdapibus lacus</p>
-        </div>
-        <form>
-<!--            сделать форму -->
-        </form>
-    </div>
-    <footer>
-		<div class="footer_content">
-			<div class="container flex_container">
-			    <div class="copyright">
-				     <p>© <span class="copy">copyright 2014 by PSD Booster. All Rights Reserved</span></p>
-			    </div>
-			<div class="social">
-				<a href="#"><img src="" href="#"></a>
-				<a href="#"><img src="" href="#"></a>
-				<a href="#"><img src="" href="#"></a>
-				<a href="#"><img src="" href="#"></a>
-                <a href="#"><img src="" href="#"></a>
+	<div class="header">
+		<div class="wrapper">
+			<div class="logo">
+				<img src="image/logo.png" alt=""/>
+			</div>
+			<ul class="menu">
+				<li class="home"><a href="">Home</a></li>
+				<li class="m"><a href="">about</a></li>
+				<li class="m"><a href="">work</a></li>
+				<li class="m"><a href="">Team</a></li>
+				<li class="m"><a href="">services</a></li>
+				<li class="m"><a href="">features</a></li>
+				<li class="m"><a href="">contact</a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="banner">
+		<div class="wrapper">
+		<h1>Welcome to our marketplace</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique <br/>ndolor non, ornare sagittis dolor. Nulla vestibulu lacus ...</p>
+		<a href="#" class="button button_background">view more</a>
+		<a href="#" class="button button_transparent">video tour</a>
+		</div>
+	</div>
+	<div class="modest section">
+	<div class="wrapper">
+	<h2>We are modest</h2>
+	<div class="grid">
+		<div class="info">
+			<div class="info_1">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p><br/>
+				<p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
+				FLGDE 
+			</div>
+			<div class="info_1">
+				<ol type="01">
+					<li class="numb">
+						<p class="number">01</p>
+						<div class="numb_1">					
+						 <h4>Dedication to the customers</h4>
+						 <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
+						</div>
+					</li>
+					<li class="numb">
+						<p class="number">02</p>
+						<div class="numb_1">					
+						 <h4>working closely with our clients</h4>
+						 <p>Sed blandit nisi urna, sed pellentesque enim consectetur vitae. Suspendisse ut vehicula nibh.</p>
+						</div>
+					</li>
+					<li class="numb">
+						<p class="number">03</p>
+						<div class="numb_1">
+						 <h4>working closely with our clients</h4>
+						 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eleifend laoreet euismod.</p>
+						</div>
+					</li>
+				</ol>
 			</div>
 		</div>
-		</div>	
+	</div>
+	</div>
+	</div>	
+	<div class="wrapper section">
+	<h2>meet the team</h2>
+	<div class="grid">
+		<div class="meet">
+			<div class="speaker">
+				<img src="image/pic1.png" alt="">
+				<a>gloria bromley</a>
+				<p>ceo and founder</p>
+			</div>
+			<div class="speaker">
+				<img src="image/pic2.png" alt="">
+				<a>paul torres</a>
+				<p>head of development</p>
+			</div>
+			<div class="speaker">
+				<img src="image/pic3.png" alt="">
+				<a>judith gillette</a>
+				<p>graphicDesinger</p>
+			</div>
+			<div class="speaker">
+				<img src="image/pic4.png" alt="">
+				<a>delores reed</a>
+				<p>client cervice director</p>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="lovely section">
+	<div class="wrapper">
+	<h2>Lovely work</h2>
+	<div class="grid">
+		<div class="travel">
+			<div class="foto">
+				<img src="image/pic5.png" alt="">
+			</div>
+			<div class="foto"><img src="image/pic6.png" alt=""></div>
+			<div class="foto"><img src="image/pic7.png" alt=""></div>
+			<div class="foto"><img src="image/pic8.png" alt=""></div>
+			<div class="foto"><img src="image/pic9.png" alt=""></div>
+			<div class="foto"><img src="image/pic10.png" alt=""></div>  
+		</div>
+	</div>	
+	<a href="#" class="button button_transparent">show me more</a>
+	</div>
+	</div>
+	<div class="wrapper section">
+	<h2>what we do</h2>
+	<div class="grid">
+	<div class="setting">
+		<div class="help">
+			<img src="image/1-48.png" alt="">
+			<h4>Easy theme Setup</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div class="help">
+			<img src="image/2-48.png" alt="">
+			<h4>pixel perfect design</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/3-48.png" alt="">
+			<h4>responsive display</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/4-48.png" alt="">
+			<h4>24/7 support</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/5-48.png" alt="">
+			<h4>Easy theme Setup</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/6-48.png" alt="">
+			<h4>pixel perfect design</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/7-48.png" alt="">
+			<h4>responsive display</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+		<div>
+			<img src="image/8-48.png" alt="">
+			<h4>24/7 support</h4>
+			<p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+		</div>
+	</div>
+	</div>
+	</div>
+	<div class="lovely section">
+	<div class="wrapper">
+	<h2>features</h2>
+	<div class="grid">
+	<div class="features">
+	<div class="nature">
+		<img src="image/pic11.png" alt="">
+		<h2>product design: eames chairs</h2>
+		<p>Eames designs are certainlyiconic. Everyone of usknow at leasttwo or three of their famous chairs. Iwould even risksaying that mostof us dream about havinga nice Eames</p>
+		</div>
+		<div class="nature">
+			<img src="image/pic12.png" alt="">
+			<h2>elegantand colorful logos</h2>
+			<p>I`ve always found logodesign to be one of the most challenging things to get right. There`s so much that a logo can say about a brand without actully saying it.</p>
+		</div>
+		<div class="nature">
+			<img src="image/pic13.png" alt="">
+			<h2>a showcase of creative</h2>
+			<p>It`s always interesting to see another designer`s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
+		</div>
+		</div>
+	</div>
+	</div>
+	</div>	
+	<div class="map section">
+		<img src="image/pic14.png" alt="">
+	<div class="wrapper">
+		<h2>stay in touch</h2>
+	</div>
+	</div>
+	<div class="wrapper section">
+	<div class="contacts">
+	<div>
+		<h2>Contact information</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus,<br/> tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed<br/> molestie gravida.</p>
+		<p>Cras fermentum elit quis magna congue, <strong>vel sodales</strong> arcu vestibulum.<br/> Nunc lobortis dui magna, quisdapibus lacus</p>
+	</div>
+	<form>
+<!--            сделать форму -->
+	</form>
+	</div>
+	</div>
+	<footer>		
+		<div class="footer_content">
+		<div class="wrapper">
+			<div class="container flex_container">
+				<div class="copyright">
+					<p>© <span class="copy">copyright 2014 by PSD Booster. All Rights Reserved</span></p>
+				</div>
+				<div class="container social">
+					<a href="#"><img src="image/Pinterest.png" href="#"></a>
+					<a href="#"><img src="image/Twitter.png" href="#"></a>
+					<a href="#"><img src="image/Googleplus.png" href="#"></a>
+					<a href="#"><img src="image/Whatsapp.png" href="#"></a>
+					<a href="#"><img src="image/Instagram.png" href="#"></a>
+				</div>
+			</div>
+		</div>
+		</div>
 	</footer>
-    </div>
-</body>
+	</body>
 </html>
