--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -40,7 +40,25 @@
 			<div class="info_1">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at.</p><br/>
 				<p>Phasellus sollicitudin ante eros ornare, sit amet luctus lorem semper. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
-				FLGDE 
+			<div class="remark">
+				<ul class="R">
+					<li class="rem">
+						<a href="https://mate-academy.github.io/fe-program/lesson_01_2.html" target="_blank">F</a>
+					</li>
+					<li class="rem">
+						<a href="https://mate-academy.github.io/fe-program/lesson_02.html" target="_blank">L</a>
+					</li>
+					<li class="rem">
+						<a href="https://mate-academy.github.io/fe-program/lesson_06.html#grid" target="_blank">G</a>
+					</li>
+					<li class="rem">
+						<a href="https://mate-academy.github.io/fe-program/lesson_01_1.html" target="_blank">D</a>
+					</li>
+					<li class="rem">
+						<a href="https://mate-academy.github.io/fe-program/lesson_03.html" target="_blank">E</a>
+					</li>
+				</ul>
+			</div> 
 			</div>
 			<div class="info_1">
 				<ol type="01">
@@ -188,10 +206,8 @@
 	</div>
 	</div>	
 	<div class="map section">
-		<img src="image/pic14.png" alt="">
-	<div class="wrapper">
-		<h2>stay in touch</h2>
-	</div>
+		<h2 class="wrapper">stay in touch</h2>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d178780.4475251509!2d9.224167730870034!3d45.56149935001766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x4781505079e1868b%3A0xbe8ffa43d88f0b4b!2zT3JpbyBhbCBTZXJpbywg0JHQtdGA0pHQsNC80L4sINCG0YLQsNC70ZbRjw!3m2!1d45.6739099!2d9.688959299999999!4m5!1s0x4786c1493f1275e7%3A0x3cffcd13c6740e8d!2z0JzRltC70LDQvSwg0IbRgtCw0LvRltGP!3m2!1d45.464203499999996!2d9.189981999999999!5e0!3m2!1suk!2sua!4v1545598124425" width="1900" height="345" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	<div class="wrapper section">
 	<div class="contacts">
